shifted list numbering to avoid overlap

--- a/src/@koop-components/common/list/_list.scss
+++ b/src/@koop-components/common/list/_list.scss
@@ -110,7 +110,7 @@ ol {
 
   p {
     display: block;
-    margin: 0 0 1em 1.5em;
+    margin: 0 0 1em 3.5em;
     position: relative;
   }
 
@@ -119,7 +119,7 @@ ol {
     display: inline-block;
     position: absolute;
     left: -1.5em;
-    width: 1.5em;
+    width: 3.5em;
   }
 
   // Different indentation if the list is more than once.
